# Personal-AI-Assistant

./: .env.example  .gitignore  CODE_AUDIT_REPORT.md  DEVELOPMENT_LOG.md  DEVELOPMENT_SESSION_REPORT.md  MODULARIZATION_REPORT.md  NOTION_SETUP.md  PROJECT_PLAN.md  README.md  demo_canvas.py  inha_notice_crawler.py  interactive_test_step_9_1.py  main.py  pyproject.toml  pytest.ini  requirements.txt  temp_backup.py  test_decision_engine.py
.github/prompts/: prompt_claude.prompt.md
docs/: Agentic_AI.md  Agentic_AI_Transformation_Plan.md  MCP_TOOLS.md  apple-mcp-setup.md  리팩.md  자연어기반_전환계획.md
scripts/: gemini_json_probe.py  gemini_minimal_text.py  setup-apple-permissions.sh
src/: __init__.py  config.py  daemon.py  log_manager.py  main.py  process_monitor.py
src/ai_engine/: __init__.py  agent_state.py  decision_engine.py  dynamic_adapter.py  goal_manager.py  llm_provider.py  mcp_integration.py  multi_agent_system.py  natural_language.py  natural_language_new.py  placeholder_resolver.py  plan_validator.py  planning_engine.py  prompt_optimizer.py  prompt_templates.py  prompt_templates_new.py  react_engine.py  response_generator.py  smart_file_matcher.py  task_canvas.py
src/cli/: main.py  main_backup.py
src/core/: __init__.py  mcp_integration.py
src/discord_bot/: __init__.py  ai_handler.py  ai_handler_backup.py  ai_handler_clean.py  ai_handler_new.py  ai_handler_simple.py  apple_notes_integration.py  bot.py  bot_new.py  bot_original.py  handlers_deprecated.py  router.py  session.py
src/infrastructure/: __init__ 2.py  __init__.py  container.py  daemon.py
src/integration/: __init__.py  agentic_controller.py  container.py  event_bus.py  interfaces.py  legacy_adapter.py
src/mcp/: __init__.py  apple_agent.py.disabled  apple_agent_v2.py  apple_client.py  apple_mcp_manager.py  apple_tools.py  apple_tools_old.py  base_tool.py  executor.py  mcp_integration.py  protocol.py  registry.py  setup.py  (+2 more)
(+140 files in other folders)
